Removing Java10 stuff so that travis-ci works